--- a/.github/workflows/mulesoft-cicd.yaml
+++ b/.github/workflows/mulesoft-cicd.yaml
@@ -78,7 +78,7 @@ jobs:
           asset_desc="$(echo $api_spec | jq -r '.info.description')"
           asset_version="$(echo $api_spec | jq -r '.info.version')"
           asset_major_version=`echo $asset_version | awk -F"." '{print $1}'`
-          api_version="v${asset_major_version}"
+          api_version="${asset_major_version}"
           api_base_path="/${api_version}${{env.API_BASE_PATH}}"
           api_label="${asset_version}-$(echo ${{env.GATEWAY_TYPE}} | cut -c 1-4)-$(echo ${{env.GATEWAY_TARGET}} | cut -c 1-8)"
 
