--- a/.secrets.template
+++ b/.secrets.template
@@ -1,2 +1,5 @@
-ANYPOINT_CLIENT_ID=
-ANYPOINT_CLIENT_SECRET=
+# Use this template to create the .secrets file. To run the workflow locally using the act tool.
+# You need to fill in the values for the variables.
+
+ANYPOINT_CLIENT_ID=<your-anypoint-client-id>
+ANYPOINT_CLIENT_SECRET=<your-anypoint-client-secret>    
